Add deps to image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: node:8-alpine
     steps:
+      - run: apk add make bash git yarn
       - checkout
       - restore_cache:
           keys:
@@ -19,6 +20,7 @@ jobs:
     docker:
       - image: node:9-alpine
     steps:
+      - run: apk add make bash git yarn
       - checkout
       - restore_cache:
           keys:
