--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: node:8-alpine
     steps:
-      - run: apk add make bash git yarn
+      - run: apk add --no-cache make bash git yarn
       - checkout
       - restore_cache:
           keys:
@@ -20,7 +20,7 @@ jobs:
     docker:
       - image: node:9-alpine
     steps:
-      - run: apk add make bash git yarn
+      - run: apk add --no-cache make bash git yarn
       - checkout
       - restore_cache:
           keys:
