--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  test-node8:
+  node8:
     docker:
       - image: node:8-alpine
     steps:
@@ -16,7 +16,11 @@ jobs:
             - node_modules
           key: node8-dependencies-{{ checksum "yarn.lock" }}
       - run: yarn test
-  test-node9:
+      - store_test_results:
+          path: ~/project/reports
+      - store_artifacts:
+          path: ~/project/reports
+  node9:
     docker:
       - image: node:9-alpine
     steps:
@@ -24,17 +28,21 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - node8-dependencies-{{ checksum "yarn.lock" }}
-          - node8-dependencies-
+          - node9-dependencies-{{ checksum "yarn.lock" }}
+          - node9-dependencies-
       - run: yarn install --frozen-lockfile
       - save_cache:
           paths:
             - node_modules
-          key: node8-dependencies-{{ checksum "yarn.lock" }}
+          key: node9-dependencies-{{ checksum "yarn.lock" }}
       - run: yarn test
+      - store_test_results:
+          path: ~/project/reports
+      - store_artifacts:
+          path: ~/project/reports
 workflows:
   version: 2
   build:
     jobs:
-      - test-node8
-      - test-node9
+      - node8
+      - node9
