--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,13 +13,13 @@ jobs:
       - run: yarn install --frozen-lockfile
       - save_cache:
           paths:
-            - ~/project/node_modules
+            - node_modules
           key: node8-dependencies-{{ checksum "yarn.lock" }}
       - run: yarn test
       - store_test_results:
-          path: ~/project/reports
+          path: reports
       - store_artifacts:
-          path: ~/project/reports
+          path: reports
           destination: reports
   node9:
     docker:
@@ -34,13 +34,13 @@ jobs:
       - run: yarn install --frozen-lockfile
       - save_cache:
           paths:
-            - ~/project/node_modules
+            - node_modules
           key: node9-dependencies-{{ checksum "yarn.lock" }}
       - run: yarn test
       - store_test_results:
-          path: ~/project/reports
+          path: reports
       - store_artifacts:
-          path: ~/project/reports
+          path: reports
           destination: reports
 workflows:
   version: 2
